# Crane

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxygen  LICENSE.txt  README.md  TODO.md
Engine/: CMakeLists.txt
Engine/Application/: Application.cpp  Application.hpp  CMakeLists.txt  ClientApplication.cpp  ClientApplication.hpp
Engine/Base/: Assert.hpp  CMakeLists.txt  Clock.hpp  Config.hpp  Logger.hpp  Profiler.cpp  Types.hpp
Engine/Base/Geometry/: Rect.hpp
Engine/Base/Math/: Matrix.hpp  Transform.hpp  Vector.hpp
Engine/Components/: BoxCollider.hpp  CMakeLists.txt  Renderable.hpp  RigidBody.hpp
Engine/Core/: CMakeLists.txt  Profiler.hpp
Engine/Core/Application/: Application.cpp  Application.hpp  ApplicationInfo.hpp  BaseApplication.cpp  BaseApplication.hpp
Engine/Core/Events/: Events.hpp  KeyDown.hpp  KeyUp.hpp  MouseClick.hpp
Engine/Core/Resources/: Resource.hpp  ResourceManager.hpp
Engine/Core/Scene/: World.cpp  World.hpp
Engine/Core/Scene/Components/: BoxCollider.hpp  CircleCollider.hpp  Renderable.hpp  RigidBody.hpp  Transform.hpp
Engine/Core/Systems/: ISystem.hpp  SystemManager.cpp  SystemManager.hpp
Engine/Editor/: CMakeLists.txt  EntityDisplay.cpp  EntityDisplay.hpp
Engine/Events/: CMakeLists.txt  KeyDown.hpp  KeyUp.hpp  MouseClick.hpp
Engine/Geometry/: CMakeLists.txt  Rect.hpp
Engine/Graphics/: CMakeLists.txt  Color.hpp  DebugPass.hpp  DefaultPass.cpp  DefaultPass.hpp  IRenderer.hpp  Mesh.hpp  RenderPass.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SDLWindow.cpp  SDLWindow.hpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Vertex.hpp
Engine/Graphics/Components/: Renderable.hpp
Engine/Graphics/Pipeline/: RenderPass.hpp  RenderPipeline.cpp  RenderPipeline.hpp
Engine/Graphics/Pipeline/Passes/: DebugPass.hpp  DefaultPass.hpp
Engine/Graphics/Primitives/: Color.hpp  Mesh.hpp  Shader.hpp  Vertex.hpp
Engine/Graphics/Renderer/: IRenderer.hpp
Engine/Graphics/Renderer/SDLGPU/: SDLGPURenderer.cpp  SDLGPURenderer.hpp
Engine/Graphics/Renderer/SDLRenderer/: SDLRenderer.cpp  SDLRenderer.hpp
Engine/Graphics/SDLRenderer/: SDLRenderer.cpp  SDLRenderer.hpp
Engine/Math/: CMakeLists.txt
Engine/Physics/: BodyStructs.hpp  CMakeLists.txt  PhysicsSystem.cpp  PhysicsSystem.hpp
Engine/Scene/: CMakeLists.txt  World.cpp  World.hpp  World.inl
Engine/Scene/Components/: BoxCollider.hpp  CircleCollider.hpp  Renderable.hpp  RigidBody.hpp  Transform.hpp
Engine/Scene/Entity/: Entity.hpp  Entity.inl
Engine/Scene/World/: CMakeLists.txt  World.cpp  World.hpp
Engine/Systems/: CMakeLists.txt  ISystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SystemManager.cpp  SystemManager.hpp
Engine/World/: CMakeLists.txt  World.cpp  World.hpp
Examples/: CMakeLists.txt
Examples/Demo/: CMakeLists.txt  PlayerComponent.hpp  PlayerSystem.cpp  PlayerSystem.hpp  main.cpp
Examples/NBody/: CMakeLists.txt  CelestialBody.hpp  GravitySystem.cpp  GravitySystem.hpp  Trail.hpp  TrailPass.hpp  main.cpp
Samples/Demo/: CMakeLists.txt  PlayerComponent.hpp  PlayerSystem.cpp  PlayerSystem.hpp  main.cpp
Sources/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
Sources/Application/: Application.cpp  Application.hpp  CMakeLists.txt
Sources/Components/: CMakeLists.txt  CircleCollider.hpp  Renderable.hpp  RenderableComponent.hpp  RigidBody.hpp  Rigidbody.hpp  RigidbodyComponent.hpp  Transform.hpp  TransformComponent.hpp
Sources/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Config.hpp  Logger.hpp  Memory.hpp  Types.hpp  World.cpp  World.hpp
Sources/Editor/: CMakeLists.txt  EntityDisplay.cpp
Sources/Events/: CMakeLists.txt  IEvent.hpp  KeyPress.hpp
Sources/Geometry/: CMakeLists.txt
Sources/Graphics/: CMakeLists.txt  Color.hpp  IRenderer.hpp  Rect.hpp  Vertex.hpp
Sources/Graphics/SDLRenderer/: SDLRenderer.cpp  SDLRenderer.hpp
Sources/Math/: CMakeLists.txt  Transform.hpp
Sources/Physics/: BodyStructs.hpp  CMakeLists.txt  PhysicsFactory.cpp  PhysicsFactory.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  World.cpp  World.hpp
Sources/Systems/: CMakeLists.txt  ISystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SystemManager.cpp  SystemManager.hpp
Sources/World/: CMakeLists.txt  Entity.hpp  Entity.inl  World.cpp  World.hpp
