add_subdirectory("Application")
add_subdirectory("Components")
add_subdirectory("Core")
add_subdirectory("Editor")
add_subdirectory("Events")
add_subdirectory("Geometry")
add_subdirectory("Graphics")
add_subdirectory("Math")
add_subdirectory("Physics")
add_subdirectory("Systems")
add_subdirectory("World")
