file(GLOB_RECURSE CORE_SOURCES "*.cpp" "*.hpp")
add_library(CraneCore STATIC ${CORE_SOURCES})
target_include_directories(CraneCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(CraneCore PUBLIC "${CMAKE_SOURCE_DIR}/Sources")
target_include_directories(CraneCore PUBLIC "${CMAKE_SOURCE_DIR}/External/entt/src")
target_link_libraries(CraneCore PUBLIC Tracy::TracyClient spdlog::spdlog)
