file(GLOB_RECURSE EVENTS_SOURCES "*.hpp")
add_library(CraneEvents INTERFACE)
target_sources(CraneEvents INTERFACE ${EVENTS_SOURCES})
target_include_directories(CraneEvents INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(CraneEvents INTERFACE "${CMAKE_SOURCE_DIR}/Sources")
target_include_directories(CraneEvents INTERFACE "${CMAKE_SOURCE_DIR}/External/entt/src")
