file(GLOB_RECURSE GRAPHICS_SOURCES "*.cpp" "*.hpp")
add_library(CraneGraphics STATIC ${GRAPHICS_SOURCES})
target_include_directories(CraneGraphics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(CraneGraphics PUBLIC "${CMAKE_SOURCE_DIR}/Sources")
target_include_directories(CraneGraphics PUBLIC "${CMAKE_SOURCE_DIR}/External/entt/src")
target_link_libraries(CraneGraphics PUBLIC imgui SDL3::SDL3 CraneMath)
