file(GLOB_RECURSE MATH_SOURCES "*.hpp")
add_library(CraneMath INTERFACE)
target_sources(CraneMath INTERFACE ${MATH_SOURCES})
target_include_directories(CraneMath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(CraneMath INTERFACE "${CMAKE_SOURCE_DIR}/Sources")
target_include_directories(CraneMath INTERFACE "${CMAKE_SOURCE_DIR}/External/entt/src")
target_link_libraries(CraneMath INTERFACE glm::glm)
